--- a/My html stuffs/animation.html
+++ b/My html stuffs/animation.html
@@ -8,17 +8,17 @@ body{
 }
 </style>
 </head>
-<body background=".\assets\Screenshot (409).png">
-<a href=".\assets\animation.html">
+<body background="./assets/Screenshot (409).png">
+<a href="./assets/animation.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Home_button" type="Home" value="Home"> Home</button>
 </a>
-<a href=".\assets\animation.html">
+<a href="./assets/animation.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href=".\assets\table.html">
+<a href="./assets/table.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
-<a href=".\assets\Anant.html">
+<a href="./assets/Anant.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="ANANT_button" type="ANANT" value="ANANT"> ANANT</button>
 </a>
 <a href="https://www.youtube.com/">
@@ -32,9 +32,9 @@ body{
 </a>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <marquee direction="right" scrollamount ="40" BEHAVIOR="SCROLL" LOOP="70">
-<img src=".\assets\Screenshot (407).png" width="22%" />&emsp;&emsp;&emsp;
-<img src=".\assets\Screenshot (410).png" width="22%" />&emsp;
-<img src=".\assets\Screenshot (411).png" width="22%" />&nbsp;
+<img src="./assets/Screenshot (407).png" width="22%" />&emsp;&emsp;&emsp;
+<img src="./assets/Screenshot (410).png" width="22%" />&emsp;
+<img src="./assets/Screenshot (411).png" width="22%" />&nbsp;
 </marquee>
 </body>
 </html>
