--- a/My html stuffs/table.html
+++ b/My html stuffs/table.html
@@ -4,27 +4,27 @@
 Anant's Table
 </title>
 </head>
-<body background=".\assets\Av pics\IMG-20200214-WA0007.jpg">
-<a href=".\assets\table.html">
+<body background="./assets/Av pics/IMG-20200214-WA0007.jpg">
+<a href="./assets/table.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Home_button" type="Home" value="Home"> Home</button>
 </a>
-<a href=".\assets\animation.html">
+<a href="./assets/animation.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href=".\assets\Anant.html">
+<a href="./assets/Anant.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="ANANT_button" type="ANANT" value="ANANT"> ANANT</button>
 </a>
 <a href="https://www.youtube.com/">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="Youtube_button" type="Youtube" value="Youtube"> Youtube</button>
 </a>
 <a href="https://www.whatsapp.com/">
-<button style="background-color:blue;color:yellow;font-size:18px;font-family:Comic-Sans" name="Whatsapp_button" type="Whatsapp" value="Whatsapp">Whatsapp </button>
+<button style="background-color:blue;color:yellow;font-size:18px;font-family: Comic-Sans" name="Whatsapp_button" type="Whatsapp" value="Whatsapp">Whatsapp </button>
 </a>
 <a href="https://www.facebook.com/">
 <button style="background-color:white;color:black;font-size:18px;font-family:Comic-Sans" name="Facebook" type="Facebook" value="Facebook"> Facebook</button>
 </a>
 <marquee direction="left" behavior="scroll" bgcolor="white"><h3><font color="red">Anant's best friend list is prepared.
-<a href=".\assets\excel files\Book1.xlsx">Click here to open.</a>
+<a href="./assets/excel files/Book1.xlsx">Click here to open.</a>
 </font></h3></marquee>
 
 
