--- a/My html stuffs/Anant.html
+++ b/My html stuffs/Anant.html
@@ -11,17 +11,17 @@ body{
 }
 </style>
 </head>
-<body background=".\assets\IMG_20201113_091607.jpg">
-<a href=".\assets\My html stuffs\Anant.html">
+<body background="./assets/IMG_20201113_091607.jpg">
+<a href="./assets/My html stuffs/Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
-<a href=".\assets\My html stuffs\form.html">
+<a href="./assets/My html stuffs/form.html">
 <button style="background-color:YELLOW; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:BLACK" name="FORM_button" type="FORM" value="FORM"> FORM</button>
 </a>
-<a href=".\assets\My html stuffs\animation.html">
+<a href="./assets/My html stuffs/animation.html">
 <button style="background-color:BLUE; color:WHITE; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href=".\assets\My html stuffs\table.html">
+<a href="./assets/My html stuffs/table.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
 <a href="https://www.youtube.com/">
@@ -38,7 +38,7 @@ body{
 <font face=courier  color = black>Be the first one to visit this site..<br></br></b></i></u></h3></font>
 <i><b><u><h3><font  face=courier color = red >Anant welcome you all.</i></b></u></h3><br></br></font>
 <pre><hr color=blue>
-<marquee><img src=".\assets\IMG-20200214-WA0007.jpg"</img><br></br>
+<marquee><img src="./assets/IMG-20200214-WA0007.jpg"</img><br></br>
 </marquee>
 </pre><hr color=red>
 <pre><hr color=blue><marquee bgcolor=red direction=left><font size=8 face=courier  color = green  ><small>I love you India</small> <big>I love you India</big></font>
@@ -51,16 +51,16 @@ body{
 <pre><hr color=blue><strong>I love you India</strong><strike>I love you India</strike></font></pre><hr color=red></marquee>
 A <sup>2</sup> + B<sup> 2</sup><br></br>
 A <sub>2</sub> + B<sub> 2</sub><br></br>
-<a href=".\assets\Av pics\IMG_20200408_082913_129.jpg"><font size=10>Anant Pic</font></a>
+<a href="./assets/Av pics/IMG_20200408_082913_129.jpg"><font size=10>Anant Pic</font></a>
 <p align=center><font size='10' >Aniket</font></p>
 	
 	<audio controls>
-		<source src=".\assetsmusic\Nachunga_Aise-Millind_Gaba_Ft_Kartik_Aaryan.mp3">
+		<source src="./assetsmusic/Nachunga_Aise-Millind_Gaba_Ft_Kartik_Aaryan.mp3">
 	</audio>			<audio controls>
-					<source src=".\assets\music\01 - Intehaan - (320 Kbps) - DownloadMing.ME.mp3">
+					<source src="./assets/music/01 - Intehaan - (320 Kbps) - DownloadMing.ME.mp3">
 				</audio>
 					<video  width="400" height="400" controls>
-						<source src=".\assets\screen recorder\Screenrecorder-2021-05-12-19-17-46-589.mp4"></video>
+						<source src="./assets/screen recorder/Screenrecorder-2021-05-12-19-17-46-589.mp4"></video>
 
 
 </body>
