--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -4,16 +4,16 @@
 Mobile Comapnies
 </title>
 </head>
-<a href=".\assets\OPTGROUP.html">
+<a href="./assets/OPTGROUP.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
-<a href=".\assets\form.html">
+<a href="./assets/form.html">
 <button style="background-color:YELLOW; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:BLACK" name="FORM_button" type="FORM" value="FORM"> FORM</button>
 </a>
-<a href=".\assets\animation.html">
+<a href="./assets/animation.html">
 <button style="background-color:BLUE; color:WHITE; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href=".\assets\table.html">
+<a href="./assets/table.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
 <a href="https://www.youtube.com/">
