Modified to add music.....Screen Record file still missing

--- a/My html stuffs/Anant.html
+++ b/My html stuffs/Anant.html
@@ -55,9 +55,9 @@ A <sub>2</sub> + B<sub> 2</sub><br></br>
 <p align=center><font size='10' >Aniket</font></p>
 	
 	<audio controls>
-		<source src="./assetsmusic/Nachunga_Aise-Millind_Gaba_Ft_Kartik_Aaryan.mp3">
+		<source src="./Nachunga_Aise-Millind_Gaba_Ft_Kartik_Aaryan.mp3">
 	</audio>			<audio controls>
-					<source src="./assets/music/01 - Intehaan - (320 Kbps) - DownloadMing.ME.mp3">
+					<source src="./01 - Intehaan - (320 Kbps) - DownloadMing.ME.mp3">
 				</audio>
 					<video  width="400" height="400" controls>
 						<source src="./assets/screen recorder/Screenrecorder-2021-05-12-19-17-46-589.mp4"></video>
