Fixed a software bug cause error 404 in redirection

--- a/My html stuffs/Anant.html
+++ b/My html stuffs/Anant.html
@@ -12,16 +12,16 @@ body{
 </style>
 </head>
 <body background="./assets/IMG_20201113_091607.jpg">
-<a href="./assets/My html stuffs/Anant.html">
+<a href="./assets/Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
-<a href="./assets/My html stuffs/form.html">
+<a href="./assets/form.html">
 <button style="background-color:YELLOW; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:BLACK" name="FORM_button" type="FORM" value="FORM"> FORM</button>
 </a>
-<a href="./assets/My html stuffs/animation.html">
+<a href="./assets/animation.html">
 <button style="background-color:BLUE; color:WHITE; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href="./assets/My html stuffs/table.html">
+<a href="./assets/table.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
 <a href="https://www.youtube.com/">
@@ -55,9 +55,9 @@ A <sub>2</sub> + B<sub> 2</sub><br></br>
 <p align=center><font size='10' >Aniket</font></p>
 	
 	<audio controls>
-		<source src="./Nachunga_Aise-Millind_Gaba_Ft_Kartik_Aaryan.mp3">
+		<source src="./assets/Nachunga_Aise-Millind_Gaba_Ft_Kartik_Aaryan.mp3">
 	</audio>			<audio controls>
-					<source src="./01 - Intehaan - (320 Kbps) - DownloadMing.ME.mp3">
+					<source src="./assets/01 - Intehaan - (320 Kbps) - DownloadMing.ME.mp3">
 				</audio>
 					<video  width="400" height="400" controls>
 						<source src="./assets/screen recorder/Screenrecorder-2021-05-12-19-17-46-589.mp4"></video>
