Fix File Path Error 201

--- a/My html stuffs/Anant.html
+++ b/My html stuffs/Anant.html
@@ -12,16 +12,16 @@ body{
 </style>
 </head>
 <body background="./assets/IMG_20201113_091607.jpg">
-<a href="./assets/Anant.html">
+<a href="./Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
-<a href="./assets/form.html">
+<a href="./form.html">
 <button style="background-color:YELLOW; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:BLACK" name="FORM_button" type="FORM" value="FORM"> FORM</button>
 </a>
-<a href="./assets/animation.html">
+<a href="./animation.html">
 <button style="background-color:BLUE; color:WHITE; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href="./assets/table.html">
+<a href="./table.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
 <a href="https://www.youtube.com/">
@@ -51,16 +51,16 @@ body{
 <pre><hr color=blue><strong>I love you India</strong><strike>I love you India</strike></font></pre><hr color=red></marquee>
 A <sup>2</sup> + B<sup> 2</sup><br></br>
 A <sub>2</sub> + B<sub> 2</sub><br></br>
-<a href="./assets/Av pics/IMG_20200408_082913_129.jpg"><font size=10>Anant Pic</font></a>
+<a href="./My html stuffs/assets/Av pics/IMG_20200408_082913_129.jpg"><font size=10>Anant Pic</font></a>
 <p align=center><font size='10' >Aniket</font></p>
 	
 	<audio controls>
-		<source src="./assets/Nachunga_Aise-Millind_Gaba_Ft_Kartik_Aaryan.mp3">
+		<source src="./My html stuffs/assets/Nachunga_Aise-Millind_Gaba_Ft_Kartik_Aaryan.mp3">
 	</audio>			<audio controls>
 					<source src="./assets/01 - Intehaan - (320 Kbps) - DownloadMing.ME.mp3">
 				</audio>
 					<video  width="400" height="400" controls>
-						<source src="./assets/screen recorder/Screenrecorder-2021-05-12-19-17-46-589.mp4"></video>
+						<source src="./My html stuffs/assets/screen recorder/Screenrecorder-2021-05-12-19-17-46-589.mp4"></video>
 
 
 </body>
