--- a/My html stuffs/animation.html
+++ b/My html stuffs/animation.html
@@ -9,16 +9,16 @@ body{
 </style>
 </head>
 <body background="./assets/Screenshot (409).png">
-<a href="./assets/animation.html">
+<a href="./animation.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Home_button" type="Home" value="Home"> Home</button>
 </a>
-<a href="./assets/animation.html">
+<a href="./animation.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href="./assets/table.html">
+<a href="./table.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
-<a href="./assets/Anant.html">
+<a href="./Anant.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="ANANT_button" type="ANANT" value="ANANT"> ANANT</button>
 </a>
 <a href="https://www.youtube.com/">
