--- a/My html stuffs/table.html
+++ b/My html stuffs/table.html
@@ -5,13 +5,13 @@ Anant's Table
 </title>
 </head>
 <body background="./assets/Av pics/IMG-20200214-WA0007.jpg">
-<a href="./assets/table.html">
+<a href="./table.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Home_button" type="Home" value="Home"> Home</button>
 </a>
-<a href="./assets/animation.html">
+<a href="./animation.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href="./assets/Anant.html">
+<a href="./Anant.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="ANANT_button" type="ANANT" value="ANANT"> ANANT</button>
 </a>
 <a href="https://www.youtube.com/">
