--- a/My html stuffs/animation.html
+++ b/My html stuffs/animation.html
@@ -9,7 +9,7 @@ body{
 </style>
 </head>
 <body background="./assets/Screenshot (409).png">
-<a href="./animation.html">
+<a href="./Anant.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Home_button" type="Home" value="Home"> Home</button>
 </a>
 <a href="./animation.html">
