--- a/My html stuffs/table.html
+++ b/My html stuffs/table.html
@@ -5,7 +5,7 @@ Anant's Table
 </title>
 </head>
 <body background="./assets/Av pics/IMG-20200214-WA0007.jpg">
-<a href="./table.html">
+<a href="./Anant.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Home_button" type="Home" value="Home"> Home</button>
 </a>
 <a href="./animation.html">
