--- a/My html stuffs/animation.html
+++ b/My html stuffs/animation.html
@@ -4,21 +4,22 @@
 body{
 	background-repeat: no-repeat;
 	background-size:100% 100%;
-	background-attachment:fixed;
+	background-size: 100%;
+	
 }
 </style>
 </head>
-<body background="C:\Users\Lenovo\Desktop\My html stuffs\Screenshot (409).png">
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\animation.html">
+<body background="./assets/IMG_20210605_182751.jpg">
+<a href="./Anant.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Home_button" type="Home" value="Home"> Home</button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\animation.html">
+<a href="./animation.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\table.html">
+<a href="./table.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\Anant.html">
+<a href="./Anant.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="ANANT_button" type="ANANT" value="ANANT"> ANANT</button>
 </a>
 <a href="https://www.youtube.com/">
@@ -32,9 +33,11 @@ body{
 </a>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <marquee direction="right" scrollamount ="40" BEHAVIOR="SCROLL" LOOP="70">
-<img src="C:\Users\Lenovo\Desktop\My html stuffs\Screenshot (407).png" width="22%" />&emsp;&emsp;&emsp;
-<img src="C:\Users\Lenovo\Desktop\My html stuffs\Screenshot (410).png" width="22%" />&emsp;
-<img src="C:\Users\Lenovo\Desktop\My html stuffs\Screenshot (411).png" width="22%" />&nbsp;
+<div class="row">
+<img src="./assets/a.gif" width="22%" />&emsp;&emsp;&emsp;
+<img src="./assets/b.gif" width="22%" />&emsp;
+<img src="./assets/c (1).gif" width="22%" />&nbsp;
+</div>
 </marquee>
 </body>
 </html>
