--- a/My html stuffs/table.html
+++ b/My html stuffs/table.html
@@ -4,14 +4,14 @@
 Anant's Table
 </title>
 </head>
-<body background="C:\AV COLLECTION\Av pics\IMG-20200214-WA0007.jpg">
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\table.html">
+<body bgcolor="yellow">
+<a href="./Anant.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Home_button" type="Home" value="Home"> Home</button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\animation.html">
+<a href="./animation.html">
 <button style="background-color:green; color:violet; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\Anant.html">
+<a href="./Anant.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="ANANT_button" type="ANANT" value="ANANT"> ANANT</button>
 </a>
 <a href="https://www.youtube.com/">
@@ -24,7 +24,7 @@ Anant's Table
 <button style="background-color:white;color:black;font-size:18px;font-family:Comic-Sans" name="Facebook" type="Facebook" value="Facebook"> Facebook</button>
 </a>
 <marquee direction="left" behavior="scroll" bgcolor="white"><h3><font color="red">Anant's best friend list is prepared.
-<a href="C:\Users\Lenovo\Desktop\excel files\Book1.xlsx">Click here to open.</a>
+<a href="./assets/Table html uses/Book1.xlsx">Click here to open.</a>
 </font></h3></marquee>
 
 
