--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -1,19 +1,27 @@
 <html>
 <head>
+<style>
+body{
+  height: 100%;
+  background-size: 30%;
+}
+</style>
 <title>
 Mobile Comapnies
 </title>
 </head>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\OPTGROUP.html">
+<body background="./assets/IMG_20210627_141252.jpg" >
+ 
+<a href="./Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\form.html">
+<a href="./form.html">
 <button style="background-color:YELLOW; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:BLACK" name="FORM_button" type="FORM" value="FORM"> FORM</button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\animation.html">
+<a href="./animation.html">
 <button style="background-color:BLUE; color:WHITE; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\table.html">
+<a href="./table.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
 <a href="https://www.youtube.com/">
@@ -25,4 +33,6 @@ Mobile Comapnies
 <a href="https://www.facebook.com/">
 <button style="background-color:white;color:black;font-size:18px;font-family:Comic-Sans" name="Facebook" type="Facebook" value="Facebook"> Facebook</button>
 </a>
+ 
+</body>
 </html>
