--- a/My html stuffs/form.html
+++ b/My html stuffs/form.html
@@ -4,13 +4,13 @@
 Form on Html
 </title>
 </head>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\FORM.html">
+<a href="./Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\animation.html">
+<a href="./animation.html">
 <button style="background-color:BLUE; color:WHITE; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
-<a href="C:\Users\Lenovo\Desktop\My html stuffs\table.html">
+<a href="./table.html">
 <button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
 <a href="https://www.youtube.com/">
@@ -33,16 +33,16 @@ PADDING:20PX;
 MARGIN:AUTO;
 BACKGROUND:WHITE;
 FONT-SIZE:20PX;
-COLOR:BLUE
+COLOR:BLUE;
 }
 INPUT[TYPE="TEXT"]{
-WIDTH;100%
+WIDTH:100%;
 PADDING:10PX;
 FONT-SIZE:20PX;
 COLOR:WHITE;
 }
 INPUT[TYPE="TEXT"]{
-WIDTH;100%
+WIDTH:100%;
 PADDING:10PX;
 FONT-SIZE:17PX;
 COLOR:WHITE;
@@ -53,7 +53,7 @@ FONT-SIZE:15PX;
 }
 TEXTAREA{
 BACKGROUND:#F2F2F2;
-WIDTH:100%
+WIDTH:100%;
 FONT-SIZE:15PX;
 MARGIN:AUTO;
 }
