--- a/My html stuffs/Anant.html
+++ b/My html stuffs/Anant.html
@@ -47,8 +47,8 @@ body{
 <marquee>
 	<div class="row">
 		<img src="./assets/IMG-20200214-WA0007.jpg">
-		<br> <br>
-		<img src="./assets/IMG_20210703_184336.jpg" width="8%">
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<img src="./assets/IMG_20210703_184336.jpg" width="20%">
 	</div>
 	<br>
 </marquee>
