--- a/My html stuffs/form.html
+++ b/My html stuffs/form.html
@@ -60,7 +60,7 @@ MARGIN:AUTO;
 </STYLE>
 <body>
 
-<FORM ACTION="anant.html">
+<FORM ACTION="https://www.google.com">
 <textarea rows=3 cols=30  placeholder="write..."></textarea><br><br>
 <textarea rows=3 cols=30></textarea><br><br>
 <textarea rows=3 cols=30 READONLY>THIS TEXT CAN ONLY BE READ...</textarea><br><br>
