--- a/My html stuffs/Anant.html
+++ b/My html stuffs/Anant.html
@@ -25,7 +25,7 @@ body{
 <button style="background-color:darkorange; color:WHITE; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
 </a>
 <a href="./table.html">
-<button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
+<button style="background-color:fuchsia;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
 </a>
 <a href="./OPTGROUP.html">
 	<button style="background-color:blue; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:YELLOW" name="FORM_button" type="FORM" value="FORM"> OPTGROUP</button>
