--- a/My html stuffs/Anant.html
+++ b/My html stuffs/Anant.html
@@ -16,7 +16,7 @@ body{
 </head>
 <body background="./assets/IMG_20201113_091607.jpg">
 <a href="./Anant.html">
-<button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
+<button style="background-color:slateblue; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
 <a href="./form.html">
 <button style="background-color:YELLOW; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:BLACK" name="FORM_button" type="FORM" value="FORM"> FORM</button>
