--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -32,9 +32,11 @@ Mobile Comapnies
 </a>
 <a href="https://www.facebook.com/">
 <button style="background-color:white;color:black;font-size:18px;font-family:Comic-Sans" name="Facebook" type="Facebook" value="Facebook"> Facebook</button>
-</a>
+</a><br><br><br>
   <select>
+   <optgroup Label="XIOMI">
   <option>XIOMI MI 11</option>
+  </optgroup>   
   </select>
 
 </body>
