--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -35,7 +35,7 @@ Mobile Comapnies
 </a><br><br><br>
   <select>
    <optgroup Label="XIOMI">
-  <option>XIOMI MI 11</option>
+  <option><a href="./https://www.gizbot.com/new-mobiles/xiaomi-mi-11-lite-8512/#gf-highlights">XIOMI MI 11</a></option>
   </optgroup>   
   </select>
 
