--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -39,6 +39,6 @@ Mobile Comapnies
   </optgroup>   
   </select>
 <br><br><br>
-<a href="https://www.gizbot.com/new-mobiles/xiaomi-mi-11-lite-8512/#gf-highlights">Anant</a>
+<a href="https://www.gizbot.com/new-mobiles/xiaomi-mi-11-lite-8512/#gf-highlights"><font size=10>Anant link</font></a>
 </body>
 </html>
