--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -10,7 +10,7 @@ body{
 Mobile Comapnies
 </title>
 </head>
-<body background="./assets/IMG_20210627_141252.jpg" >
+<body bg color="aqua">
  
 <a href="./Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
