--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -10,8 +10,7 @@ body{
 Mobile Comapnies
 </title>
 </head>
-<body bg color="aqua">
- 
+<body bg color="yellow">
 <a href="./Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
