hgdfgfttgstr5syt.html

--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -5,7 +5,7 @@
 Mobile Comapnies
 </title>
 </head>
-<body bgcolor="yellow">
+<body bgcolor="aqua">
 <a href="./Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
@@ -33,6 +33,5 @@ Mobile Comapnies
   </optgroup>   
   </select>
 <br><br><br>
-<a href="https://www.gizbot.com/new-mobiles/xiaomi-mi-11-lite-8512/#gf-highlights"><font size=10>Anant link</font></a>
 </body>
 </html>
