--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -6,6 +6,7 @@ Mobile Comapnies
 </title>
 </head>
 <body bgcolor="aqua">
+ <img  width=100 height=100 src = "./assets/Screenshot%20(508).png"></img>
 <a href="./Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
 </a>
