--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -6,6 +6,28 @@ Mobile Comapnies
 </title>
 </head>
 <body bgcolor="aqua">
+ <a href="./Anant.html">
+<button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
+</a>
+<a href="./form.html">
+<button style="background-color:YELLOW; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:BLACK" name="FORM_button" type="FORM" value="FORM"> FORM</button>
+</a>
+<a href="./animation.html">
+<button style="background-color:BLUE; color:WHITE; font-size:18px;font-family:Comic-Sans" name="Animation_button" type="Animation" value="Animation">Animation </button>
+</a>
+<a href="./table.html">
+<button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="TABLE_button" type="TABLE" value="TABLE"> TABLE</button>
+</a>
+<a href="https://www.youtube.com/">
+<button style="background-color:red;color:white;font-size:18px;font-family:Comic-Sans" name="Youtube_button" type="Youtube" value="Youtube"> Youtube</button>
+</a>
+<a href="https://www.whatsapp.com/">
+<button style="background-color:blue;color:yellow;font-size:18px;font-family:Comic-Sans" name="Whatsapp_button" type="Whatsapp" value="Whatsapp">Whatsapp </button>
+</a>
+<a href="https://www.facebook.com/">
+<button style="background-color:white;color:black;font-size:18px;font-family:Comic-Sans" name="Facebook" type="Facebook" value="Facebook"> Facebook</button>
+</a><br><br><br>
+
  <img  width=1500 height=500 src = "./assets/Screenshot%20(508).png"></img>
 <a href="./Anant.html">
 <button style="background-color:VIOLET; color:violet; font-size:18px;font-family:Comic-Sans;COLOR:RED" name="Home_button" type="Home" value="Home"> HOME</button>
