--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -51,7 +51,7 @@ Mobile Comapnies
 <button style="background-color:white;color:black;font-size:18px;font-family:Comic-Sans" name="Facebook" type="Facebook" value="Facebook"> Facebook</button>
 </a><br><br><br>
 <img width=100 height=200 src="./assets/71w4n2itCNL._SY606_.jpg"></img><p><a href="https://www.amazon.in/dp/B089MVC437/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=7b3394cda2dd531aed9825abaac2c1c4&creativeASIN=B089MVC437">Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage) 
- - 108MP Quad Camera | Snapdragon 750G Processor | Upto 2000 Additional Exchange</a></p>
+<br> - 108MP Quad Camera | Snapdragon 750G Processor | Upto 2000 Additional Exchange</a></p>
 <br><br><br>
 </body>
 </html>
