--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -50,7 +50,7 @@ Mobile Comapnies
 <a href="https://www.facebook.com/">
 <button style="background-color:white;color:black;font-size:18px;font-family:Comic-Sans" name="Facebook" type="Facebook" value="Facebook"> Facebook</button>
 </a><br><br><br>
-<img width=100 height=200 src="./assets/71w4n2itCNL._SY606_.jpg"></img><p><a href="https://www.amazon.in/dp/B089MVC437/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=7b3394cda2dd531aed9825abaac2c1c4&creativeASIN=B089MVC437">Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage) 
+<img width=100 height=200 src="./assets/71w4n2itCNL._SY606_.jpg"></img><img src="./assets/71w4n2itCNL._SY606_.jpg"></img><p><a href="https://www.amazon.in/dp/B089MVC437/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=7b3394cda2dd531aed9825abaac2c1c4&creativeASIN=B089MVC437">Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage) 
 <br> - 108MP Quad Camera | Snapdragon 750G Processor |<br> Upto 2000 Additional Exchange</a></p>
 <br><br><br>
 </body>
