--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -51,7 +51,7 @@ Mobile Comapnies
 <button style="background-color:white;color:black;font-size:18px;font-family:Comic-Sans" name="Facebook" type="Facebook" value="Facebook"> Facebook</button>
 </a><br><br><br>
 <img width=100 height=200 src="./assets/71w4n2itCNL._SY606_.jpg"></img>&nbsp;
-<img src="./assets/71w4n2itCNL._SY606_.jpg"></img>
+<img  width= 100 height=200 src="./assets/Anannt.png"></img>
 <p align=center><a href="https://www.amazon.in/dp/B086982VLG/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=d58d11e25e2b175628e53165b0bbd6f9&creativeASIN=B086982VLG">
 Redmi 9 Prime (Matte Black, 4GB RAM, 64GB Storage)<br> - Full HD+ Display & <br>AI Quad Camera
 <p><a href="https://www.amazon.in/dp/B089MVC437/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=7b3394cda2dd531aed9825abaac2c1c4&creativeASIN=B089MVC437">
