--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -30,7 +30,7 @@ Mobile Comapnies
 
  <img  width=1500 height=500 src = "./assets/Screenshot%20(508).png"></img>
 <br><br><br>
-<img width=100 height=200 src="./assets/71w4n2itCNL._SY606_.jpg"></img>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<img width=100 height=200 src="./assets/71w4n2itCNL._SY606_.jpg"></img>&nbsp;&nbsp;&emsp;&emsp;
 <img  width= 100 height=200 src="./assets/Anannt.png"></img>
 <p align=center><a href="https://www.amazon.in/dp/B086982VLG/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=d58d11e25e2b175628e53165b0bbd6f9&creativeASIN=B086982VLG">
 Redmi 9 Prime (Matte Black, 4GB RAM, 64GB Storage)<br> - Full HD+ Display & <br>AI Quad Camera
