--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -45,6 +45,8 @@ Redmi 9 Prime (Matte Black, 4GB RAM, 64GB Storage)<br> - Full HD+ Display & <br>
 <p><a href="https://www.amazon.in/dp/B089MVC437/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=7b3394cda2dd531aed9825abaac2c1c4&creativeASIN=B089MVC437">
  Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage) 
 <br> - 108MP Quad Camera | Snapdragon 750G Processor |<br> Upto 2000 Additional Exchange</a></p>
+ <a href="https://www.amazon.in/dp/B08RYNZ1Y4/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=a51f885c2738fbf2953f74cad4824008&creativeASIN=B08RYNZ1Y4">
+ <p align=right>Redmi 10T 5G Phone 6GB+128GB, Cosmic Black</p></a>
 <br><br><br>
 </body>
 </html>
