--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -47,6 +47,16 @@ Redmi 9 Prime (Matte Black, 4GB RAM, 64GB Storage)<br> - Full HD+ Display & <br>
 <br> - 108MP Quad Camera | Snapdragon 750G Processor |<br> Upto 2000 Additional Exchange</a></p>
  <a href="https://www.amazon.in/dp/B08RYNZ1Y4/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=a51f885c2738fbf2953f74cad4824008&creativeASIN=B08RYNZ1Y4">
  <p align=right>Redmi 10T 5G Phone 6GB+128GB, Cosmic Black</p></a>
+&nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&nbsp;
+ <img width=100 height=100 src="./assets/pop.png"></img>
  <a href="https://www.amazon.in/dp/B08RYNZ1Y4/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=3282c7e8a98b666e37d71afcf216ef1c&creativeASIN=B08RYNZ1Y4">
   <p align=right>Redmi 10T 5G Phone 6GB+128GB, Cosmic Black</p></a>
 <br><br><br>
