--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -43,11 +43,10 @@ Mobile Comapnies
 <p align=center><a href="https://www.amazon.in/dp/B086982VLG/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=d58d11e25e2b175628e53165b0bbd6f9&creativeASIN=B086982VLG">
 Redmi 9 Prime (Matte Black, 4GB RAM, 64GB Storage)<br> - Full HD+ Display & <br>AI Quad Camera
 <p><a href="https://www.amazon.in/dp/B089MVC437/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=7b3394cda2dd531aed9825abaac2c1c4&creativeASIN=B089MVC437">
- Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage) 
+Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage) 
 <br> - 108MP Quad Camera | Snapdragon 750G Processor |<br> Upto 2000 Additional Exchange</a></p>
- <img width=150 height=200 src="./assets/pop.png"></img>
- <a href="https://www.amazon.in/dp/B08RYNZ1Y4/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=3282c7e8a98b666e37d71afcf216ef1c&creativeASIN=B08RYNZ1Y4">
- <p align=right>Redmi 10T 5G Phone 6GB+128GB, Cosmic Black</p></a>
-<br><br><br>
+<img width=150 height=200 src="./assets/pop.png"></img>
+<a href="https://www.amazon.in/dp/B08RYNZ1Y4/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=3282c7e8a98b666e37d71afcf216ef1c&creativeASIN=B08RYNZ1Y4">
+<p align=left>Redmi 10T 5G Phone 6GB+128GB, Cosmic Black</p>
 </body>
 </html>
