--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -32,7 +32,8 @@ Mobile Comapnies
  <br><br><br>
  <p align=center><font color=red size=10><b><i><u>XIOMI</b></i></u></font></p>
  <br><br><br>
-<img width=100 height=200 src="./assets/71w4n2itCNL._SY606_.jpg"></img>&nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;
+<img width=100 height=200 src="./assets/71w4n2itCNL._SY606_.jpg"></img>
+&nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;
 &emsp;&emsp;&emsp;&emsp;
 &emsp;&emsp;&emsp;&emsp;
 &emsp;&emsp;&emsp;&emsp;
@@ -48,8 +49,18 @@ Redmi 9 Prime (Matte Black, 4GB RAM, 64GB Storage)<br> - Full HD+ Display & <br>
 Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage) 
 <br> - 108MP Quad Camera | Snapdragon 750G Processor |<br> Upto 2000 Additional Exchange</a></p>
 <img width=150 height=200 src="./assets/pop.png"></img>
+ &nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&emsp;&emsp;&emsp;
+&emsp;&nbsp;
 <a href="https://www.amazon.in/dp/B08RYNZ1Y4/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=3282c7e8a98b666e37d71afcf216ef1c&creativeASIN=B08RYNZ1Y4">
 <p align=left>Redmi 10T 5G Phone 6GB+128GB, Cosmic Black</p>
+ <img width=100 height=200 src="./assets/11.png"></img>
  <a href="https://www.amazon.in/11X-Celestial-Silver-128GB-Storage/dp/B085J1DRPF/ref=sr_1_2?dchild=1&keywords=redmi+11&qid=1626791704&sr=8-2">
   <p align=center>Mi 11X 5G Celestial Silver 6GB RAM 128GB ROM
   <br> | SD 870 | DisplayMate A+ rated E4 AMOLED
