--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -57,7 +57,6 @@ Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage)
 &emsp;&emsp;&emsp;&emsp;
 &emsp;&nbsp;
 <a href="https://www.amazon.in/dp/B08RYNZ1Y4/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=3282c7e8a98b666e37d71afcf216ef1c&creativeASIN=B08RYNZ1Y4">
-<p align=left>Redmi 10T 5G Phone 6GB+128GB, Cosmic Black</p>
 &nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;
 &emsp;&emsp;&emsp;&emsp;
 &emsp;&emsp;&emsp;&emsp;
@@ -67,6 +66,7 @@ Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage)
 &emsp;&emsp;&emsp;&emsp;
 &emsp;&emsp;&emsp;&emsp;
 &emsp;&nbsp;
+ <p align=left>Redmi 10T 5G Phone 6GB+128GB, Cosmic Black</p></a>
 <img width=150 height=200 src="./assets/11.png"></img>
 <a href="https://www.amazon.in/11X-Celestial-Silver-128GB-Storage/dp/B085J1DRPF/ref=sr_1_2?dchild=1&keywords=redmi+11&qid=1626791704&sr=8-2">
 <p align=center>Mi 11X 5G Celestial Silver 6GB RAM 128GB ROM
