--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -68,7 +68,7 @@ Mi 10i 5G (Atlantic Blue, 6GB RAM, 128GB Storage)
 &emsp;&nbsp;
  <p align=left>Redmi 10T 5G Phone 6GB+128GB, Cosmic Black</p></a>
 <img width=150 height=200 src="./assets/11.png"></img>
-<a href="https://www.amazon.in/11X-Celestial-Silver-128GB-Storage/dp/B085J1DRPF/ref=sr_1_2?dchild=1&keywords=redmi+11&qid=1626791704&sr=8-2">
+<a href="https://www.amazon.in/dp/B085J1DRPF/ref=as_sl_pc_tf_til?tag=anantvinayak9-21&linkCode=w00&linkId=ae435bc751e06c3c0f1c7010f28755f7&creativeASIN=B085J1DRPF">
 <p align=center>Mi 11X 5G Celestial Silver 6GB RAM 128GB ROM
 <br> | SD 870 | DisplayMate A+ rated E4 AMOLED
 <br>|Upto 5000 Additional Exchange</p></a>
