--- a/My html stuffs/OPTGROUP.html
+++ b/My html stuffs/OPTGROUP.html
@@ -30,18 +30,9 @@ Mobile Comapnies
 <br><br><br>
 <p align=center><font color=red size=10><b><i><u>XIOMI</b></i></u></font></p>
 <br><br><br>
-
-&nbsp;&nbsp;&emsp;&emsp;&emsp;&emsp;
-&emsp;&emsp;&emsp;&emsp;
-&emsp;&emsp;&emsp;&emsp;
-&emsp;&emsp;&emsp;&emsp;
-&emsp;&emsp;&emsp;&emsp;
-&emsp;&emsp;&emsp;&emsp;
-&emsp;&emsp;&emsp;&emsp;
-&emsp;&emsp;&emsp;&emsp;
-&emsp;&nbsp;
-
 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=anantvinayak9-21&marketplace=amazon&amp;region=IN&placement=B089MS7D8F&asins=B089MS7D8F&linkId=05b79e8848a7bcc064c1905c2684e5a3&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
+    </iframe>
+<iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ac&ref=tf_til&ad_type=product_link&tracking_id=anantvinayak9-21&marketplace=amazon&amp;region=IN&placement=B089MS9SSD&asins=B089MS9SSD&linkId=3f8afa5fc5102710707e041d4a4aeeb0&show_border=false&link_opens_in_new_window=false&price_color=333333&title_color=0066c0&bg_color=ffffff">
     </iframe>
 </body>
 </html>
